
Project pantopia {
    database_type: 'PostgreSQL'
    Note: '''
        # Pantopia Database
    '''
}


Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: "now()"]
}




Table "accounts" {
  "id" bigserial [pk, increment]
  "owner" varchar [ref: > U.username, not null]
  "company_name" varchar [not null]
  "industry" varchar [not null]
  "target_industry" varchar [not null]
  "target_position" varchar [not null]
  "target_size" bigint [not null]
  "created_at" timestamptz [not null, default: "now()"]

Indexes {
  owner
}
}

Table "leads" {
  "id" bigserial [pk, increment]
  "account_id" bigint [not null]
  "email" varchar [not null]
  "telephone_number" varchar [not null]
  "target_email" varchar [not null]
  "company_name" varchar [not null]
  "conversation" varchar [not null]
  "created_at" timestamptz [not null, default: "now()"]

Indexes {
  account_id
}
}

Ref:"accounts"."id" < "leads"."account_id"



Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}